moved person icon to right side of menubar

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <div class="stripe stripeSize">
         <div class="menu">
-          <div style="float:left;"><a style="text-decoration:none;" href="#" onclick="showWork('data-intro',true)"><i class="bi bi-person-circle icon" style="vertical-align:bottom;"></i> Wes' GIS Portfolio</a></div>
-          <div style="float:right"><a target="_blank" href="https://linkedin.com/in/wesmwilliams"><i class="bi bi-linkedin icon"></i></a> &nbsp; <a target="_blank" href="https://github.com/gis-wes/"><i class="bi bi-github icon"></i></a></div>
+          <div style="float:left;">Wes' GIS Portfolio</div>
+          <div style="float:right"><a href="#" onclick="showWork('data-intro',true)"><i class="bi bi-person-circle icon"></i></a> &nbsp; <a target="_blank" href="https://linkedin.com/in/wesmwilliams"><i class="bi bi-linkedin icon"></i></a> &nbsp; <a target="_blank" href="https://github.com/gis-wes/"><i class="bi bi-github icon"></i></a></div>
         </div>
     </div>
 
