changed person icon to info icon. some reworking on that page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="stripe stripeSize">
         <div class="menu">
           <div style="float:left;">Wes' GIS Portfolio</div>
-          <div style="float:right"><a href="#" onclick="showWork('data-intro',true)"><i class="bi bi-person-circle icon"></i></a> &nbsp; <a target="_blank" href="https://linkedin.com/in/wesmwilliams"><i class="bi bi-linkedin icon"></i></a> &nbsp; <a target="_blank" href="https://github.com/gis-wes/"><i class="bi bi-github icon"></i></a></div>
+          <div style="float:right"><a href="#" onclick="showWork('data-intro',true)"><i class="bi bi-info-circle icon"></i></a> &nbsp; <a target="_blank" href="https://linkedin.com/in/wesmwilliams"><i class="bi bi-linkedin icon"></i></a> &nbsp; <a target="_blank" href="https://github.com/gis-wes/"><i class="bi bi-github icon"></i></a></div>
         </div>
     </div>
 
@@ -50,9 +50,9 @@
       <div id="menuDatabase">
         <div id="data-intro">
           <div id="dataTitle">Wes' GIS Portfolio</div>
-         <div id="dataText">This portfolio contains sample work produced in 2024 while completing ~70 credits in undergraduate GIS and UAS certificate programs. My studies included cartography, photogrammetry, remote sensing, and geospatial anaylsis. </div>
+         <div id="dataText">This portfolio contains sample work produced in 2024 after completing ~70 credits for undergraduate GIS and UAS certificate programs. My studies included cartography, photogrammetry, remote sensing, and geospatial anaylsis. </div>
           <div id="dataImage"><img class="dataImageSource" src="images/grayscalemap_wide.jpg"></div>
-          <div id="dataIcon"><i class="bi bi-person-circle icon"></i></div>
+          <div id="dataIcon"><i class="bi bi-info-circle icon"></i></div>
           <div id="dataTags">#intro</div>
         </div>
       </div>
@@ -144,5 +144,7 @@
         </div>
       </div>
     </div>
+
+    <div class="copyright"><div class="copyright">Copyright</div></div>
   </body>
 </html>
