--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="menu" class="menu">
       <div id="menuContainer" class="menuContainer">    
       </div>
+      <div class="copyright">Copyright &copy; 2024, Wes Williams</div>
     </div>
 
     <div class="stripe stripeSize">
@@ -144,7 +145,5 @@
         </div>
       </div>
     </div>
-
-    <div class="copyright"><div class="copyright">Copyright</div></div>
   </body>
 </html>
