details: tall background image, text correction

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div id="workDatabase">
         <div id="data-craterlake">
           <div id="dataTitle">Crater Lake</div>
-         <div id="dataText">This cartography focused layout explored the potential of 3D scenes and photography to capture the impressiveness of Crater Lake Nation Park. It highlights the elevation and areas of interest for visitors.</div>
+         <div id="dataText">This cartography focused layout explored the potential of 3D scenes and photography to capture the impressiveness of Crater Lake National Park. It highlights the elevation and areas of interest for visitors.</div>
           <div id="dataImage"><img class="dataImageSource" src="images/portfolio/craterlake.jpg"></div>
           <div id="dataIcon"><i class="bi bi-palette icon"></i></div>
           <div id="dataTags">#cartography #3d #spring2024</div>
