corrected typos in project descriptions

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div id="menuDatabase">
         <div id="data-intro">
           <div id="dataTitle">Wes' GIS Portfolio</div>
-         <div id="dataText">This portfolio contains sample work produced in 2024 after completing ~70 credits for undergraduate GIS and UAS certificate programs. My studies included cartography, photogrammetry, remote sensing, and geospatial anaylsis. </div>
+         <div id="dataText">This portfolio contains sample work produced in 2024 after completing ~70 credits of coursework for undergraduate GIS and UAS certificate programs. My studies included cartography, photogrammetry, remote sensing, and geospatial analysis. </div>
           <div id="dataImage"><img class="dataImageSource" src="images/grayscalemap_wide.jpg"></div>
           <div id="dataIcon"><i class="bi bi-info-circle icon"></i></div>
           <div id="dataTags">#intro</div>
@@ -68,35 +68,35 @@
         </div>
         <div id="data-3dtiles">
           <div id="dataTitle">3D Map Streaming Standards</div>
-         <div id="dataText">This research oriented <a target="_blank" href="https://storymaps.arcgis.com/stories/753a1bafd20f48a19449347841cdae24">story map</a> explores standards for streaming 3D imagery including 3D Tiles from Cesium and Indexed 3D Scene Layers (I3S) from Esri.</div>
+         <div id="dataText">This research-oriented <a target="_blank" href="https://storymaps.arcgis.com/stories/753a1bafd20f48a19449347841cdae24">story map</a> explores standards for streaming 3D imagery including 3D Tiles from Cesium and Indexed 3D Scene Layers (I3S) from Esri.</div>
           <div id="dataImage"><img class="dataImageSource" src="images/portfolio/3dtiles.jpg"></div>
           <div id="dataIcon"><i class="bi bi-box icon"></i></div>
           <div id="dataTags">#photogrammetry #3d #summer2024</div>
         </div>
         <div id="data-gee">
           <div id="dataTitle">Google Earth Engine</div>
-          <div id="dataText">This research oriented <a target="_blank" href="https://storymaps.arcgis.com/stories/36478b26211b44518b5fa3d4d285fcca">story map</a> explores how students can leverage GPT in remote sensing with Google Earth Engine to learn and prototype.</div>
+          <div id="dataText">This research-oriented <a target="_blank" href="https://storymaps.arcgis.com/stories/36478b26211b44518b5fa3d4d285fcca">story map</a> explores how students can leverage GPT in remote sensing with Google Earth Engine to learn and prototype.</div>
           <div id="dataImage"><img class="dataImageSource" src="images/portfolio/gee.jpg"></div>
           <div id="dataIcon"><i class="bi bi-globe-americas icon"></i></div>
           <div id="dataTags">#cloud #ai #remote-sensing #summer2024</div>
         </div>
         <div id="data-cropvine">
           <div id="dataTitle">U-Pick Crowd Mapping</div>
-          <div id="dataText">This interactive <a target="_blank" href="https://cropvine.com/">mobile-first website</a> enables u-pick fruit enthusiast to report what's available at PNW farms. Geofencing and a short lifespan of entries gamify data collection for those at the farm and provide breadcrumbs for others seeking a farms with active u-pick. More details are available in this <a target="_blank" href="https://storymaps.arcgis.com/stories/d6691942174a4e158ded6ff9301268f6">story map</a>.</div>
+          <div id="dataText">This interactive <a target="_blank" href="https://cropvine.com/">mobile-first website</a> enables u-pick fruit enthusiast to report what's available at PNW farms. Geofencing and a short lifespan of entries gamify data collection for those at the farm and provide breadcrumbs for others seeking farms with active u-pick. More details are available in this <a target="_blank" href="https://storymaps.arcgis.com/stories/d6691942174a4e158ded6ff9301268f6">story map</a>.</div>
           <div id="dataImage"><img class="dataImageSource" src="images/portfolio/cropvine.jpg"></div>
           <div id="dataIcon"><i class="bi bi-geo-alt icon"></i></div>
           <div id="dataTags">#mobile #interactive #spring2024</div>
         </div>
         <div id="data-fruitnetworkanalysis">
           <div id="dataTitle">U-Pick Network Analysis</div>
-         <div id="dataText">This network analysis found the closest routes to u-pick farms near Portland from multiple starting locations. Multiple destinations and traversal were provided for each point of origin. The results formed an optimized, personal fruit loop based on availability for a given day.</div>
+         <div id="dataText">This network analysis found the closest routes to u-pick farms near Portland from multiple starting locations. Multiple destinations and traversals were provided for each point of origin. The results formed an optimized, personal fruit loop based on availability for a given day.</div>
           <div id="dataImage"><img class="dataImageSource" src="images/portfolio/networkanalysis.jpg"></div>
           <div id="dataIcon"><i class="bi bi-diagram-3 icon"></i></div>
           <div id="dataTags">#network-analysis #spring2024</div>
         </div>
         <div id="data-fruitinfographic">
           <div id="dataTitle">Farmers Infographic</div>
-         <div id="dataText">This infographic explores the distribution of u-pick farms and farmers markets within 10 miles of major cities along the I-5 corridor in Oregon and Washington. The charts visualize both the quantity and ratio of each for cities along this route.</div>
+         <div id="dataText">This infographic explores the distribution of u-pick farms and farmers markets within 10 miles of major cities along the I-5 corridor in Oregon and Washington. The charts visualize both the quantity and ratio of each offering near cities along this route.</div>
           <div id="dataImage"><img class="dataImageSourceTall" src="images/portfolio/fruitinfographic.jpg"></div>
           <div id="dataIcon"><i class="bi bi-bar-chart icon"></i></div>
           <div id="dataTags">#infographic #spring2024</div>
@@ -124,7 +124,7 @@
         </div>
          <div id="data-pdxhaxards">
           <div id="dataTitle">PDX Hazards</div>
-         <div id="dataText">This analysis studies the individual and combined flood, heat and demographic risks in Portland metro. Flood risk were computed with hydrlogic tools from a DEM of the area. Heat risk was determined from thermal satellite imagery. The census bureau's ACS dataset contained demographics for studying socioeconmic vulnerability.</div>
+         <div id="dataText">This analysis studies the individual and combined flood, heat and demographic risks in Portland metro. Flood risk were computed with hydrologic tools from a DEM of the area. Heat risk was determined from thermal satellite imagery. The census bureau's ACS dataset contained demographics for studying socioeconomic vulnerability.</div>
           <div id="dataImage"><img class="dataImageSourceTall" src="images/portfolio/pdxhazards.jpg"></div>
           <div id="dataIcon"><i class="bi bi-globe-americas icon"></i></div>
           <div id="dataTags">#remote-sensing #fall2024</div>
